syntax = "proto3";

package service.v1;

service RaidoService {
  rpc GetSessions(GetSessionsRequest) returns (GetSessionsResponse) {}
  rpc SessionTunnelStart(SessionTunnelStartRequest) returns (SessionTunnelStartResponse) {}
  rpc SessionTunnelStop(SessionTunnelStopRequest) returns (SessionTunnelStopResponse) {}
}

message GetSessionsRequest {}

message GetSessionsResponse {
  map<string, Session> sessions = 1;
}

message Session {
  string name = 1;
  repeated string routes = 2;
  bool status = 3;
}

message SessionTunnelStartRequest {
  string token = 1;
  string session_id = 2;
}

message SessionTunnelStartResponse {
  string tunnel_id = 1;
}

message SessionTunnelStopRequest {
  string session_id = 1;
}

message SessionTunnelStopResponse {
  string tunnel_id = 1;
}

